turn off notify

--- a/ProcessManagement/Views/ProcessRun/Detailtask.cshtml
+++ b/ProcessManagement/Views/ProcessRun/Detailtask.cshtml
@@ -26,65 +26,65 @@
             width: 100%;
         }
 
-        .comments-app h1 {
-            color: #191919;
-            margin-bottom: 1.5em;
-            text-align: center;
-            text-shadow: 0 0 2px rgba(152, 152, 152, 1);
-        }
+            .comments-app h1 {
+                color: #191919;
+                margin-bottom: 1.5em;
+                text-align: center;
+                text-shadow: 0 0 2px rgba(152, 152, 152, 1);
+            }
 
         .comment-form {
         }
 
-        .comment-form .comment-avatar {
-        }
+            .comment-form .comment-avatar {
+            }
 
-        .comment-form .form {
-            margin-left: 100px;
-        }
+            .comment-form .form {
+                margin-left: 100px;
+            }
 
-        .comment-form .form .form-row {
-            margin-bottom: 10px;
-        }
+                .comment-form .form .form-row {
+                    margin-bottom: 10px;
+                }
 
-        .comment-form .form .form-row:last-child {
-            margin-bottom: 0;
-        }
+                    .comment-form .form .form-row:last-child {
+                        margin-bottom: 0;
+                    }
 
-        .comment-form .form .input {
-            background-color: #fcfcfc;
-            border: 1px solid #ced4da;
-            border-radius: 4px;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, .15);
-            color: #555f77;
-            font-family: inherit;
-            font-size: 14px;
-            padding: 5px 10px;
-            outline: none;
-            width: 100%;
-            -webkit-transition: 350ms box-shadow;
-            -moz-transition: 350ms box-shadow;
-            -ms-transition: 350ms box-shadow;
-            -o-transition: 350ms box-shadow;
-            transition: 350ms box-shadow;
-        }
+                .comment-form .form .input {
+                    background-color: #fcfcfc;
+                    border: 1px solid #ced4da;
+                    border-radius: 4px;
+                    box-shadow: 0 1px 1px rgba(0, 0, 0, .15);
+                    color: #555f77;
+                    font-family: inherit;
+                    font-size: 14px;
+                    padding: 5px 10px;
+                    outline: none;
+                    width: 100%;
+                    -webkit-transition: 350ms box-shadow;
+                    -moz-transition: 350ms box-shadow;
+                    -ms-transition: 350ms box-shadow;
+                    -o-transition: 350ms box-shadow;
+                    transition: 350ms box-shadow;
+                }
 
-        .comment-form .form textarea.input {
-            height: 100px;
-            padding: 15px;
-        }
+                .comment-form .form textarea.input {
+                    height: 100px;
+                    padding: 15px;
+                }
 
-        .comment-form .form label {
-            color: #555f77;
-            font-family: inherit;
-            font-size: 14px;
-        }
+                .comment-form .form label {
+                    color: #555f77;
+                    font-family: inherit;
+                    font-size: 14px;
+                }
 
-        .comment-form .form .input:focus{
-            box-shadow: 0 2px 6px rgba(121, 137, 148, .55);
-        }
+                .comment-form .form .input:focus {
+                    box-shadow: 0 2px 6px rgba(121, 137, 148, .55);
+                }
 
-        
+
 
         .comment-form,
         .comment {
@@ -93,95 +93,95 @@
             z-index: 0;
         }
 
-        .comment-form .comment-avatar,
-        .comment .comment-avatar {
-            border: 2px solid #fff;
-            border-radius: 50%;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-            height: 80px;
-            left: 0;
-            overflow: hidden;
-            position: absolute;
-            top: 0;
-            width: 80px;
-        }
+            .comment-form .comment-avatar,
+            .comment .comment-avatar {
+                border: 2px solid #fff;
+                border-radius: 50%;
+                box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+                height: 80px;
+                left: 0;
+                overflow: hidden;
+                position: absolute;
+                top: 0;
+                width: 80px;
+            }
 
-        .comment-form .comment-avatar img,
-        .comment .comment-avatar img {
-            display: block;
-            height: auto;
-            width: 100%;
-        }
+                .comment-form .comment-avatar img,
+                .comment .comment-avatar img {
+                    display: block;
+                    height: auto;
+                    width: 100%;
+                }
 
-        .comment .comment-box {
-            background-color: #fcfcfc;
-            border-radius: 4px;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, .15);
-            margin-left: 100px;
-            min-height: 60px;
-            position: relative;
-            padding: 15px;
-        }
+            .comment .comment-box {
+                background-color: #fcfcfc;
+                border-radius: 4px;
+                box-shadow: 0 1px 1px rgba(0, 0, 0, .15);
+                margin-left: 100px;
+                min-height: 60px;
+                position: relative;
+                padding: 15px;
+            }
 
-        .comment .comment-box:before,
-        .comment .comment-box:after {
-            border-width: 10px 10px 10px 0;
-            border-style: solid;
-            border-color: transparent #FCFCFC;
-            content: "";
-            left: -10px;
-            position: absolute;
-            top: 20px;
-        }
+                .comment .comment-box:before,
+                .comment .comment-box:after {
+                    border-width: 10px 10px 10px 0;
+                    border-style: solid;
+                    border-color: transparent #FCFCFC;
+                    content: "";
+                    left: -10px;
+                    position: absolute;
+                    top: 20px;
+                }
 
-        .comment .comment-box:before {
-            border-color: transparent rgba(0, 0, 0, .05);
-            top: 22px;
-        }
+                .comment .comment-box:before {
+                    border-color: transparent rgba(0, 0, 0, .05);
+                    top: 22px;
+                }
 
-        .comment .comment-text {
-            color: #555f77;
-            font-size: 15px;
-            margin-bottom: 25px;
-        }
+            .comment .comment-text {
+                color: #555f77;
+                font-size: 15px;
+                margin-bottom: 25px;
+            }
 
-        .comment .comment-footer {
-            color: #acb4c2;
-            font-size: 13px;
-        }
+            .comment .comment-footer {
+                color: #acb4c2;
+                font-size: 13px;
+            }
 
-        .comment .comment-footer:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
+                .comment .comment-footer:after {
+                    content: "";
+                    display: table;
+                    clear: both;
+                }
 
-        .comment .comment-footer a {
-            color: #acb4c2;
-            text-decoration: none;
-            -webkit-transition: 350ms color;
-            -moz-transition: 350ms color;
-            -ms-transition: 350ms color;
-            -o-transition: 350ms color;
-            transition: 350ms color;
-        }
+                .comment .comment-footer a {
+                    color: #acb4c2;
+                    text-decoration: none;
+                    -webkit-transition: 350ms color;
+                    -moz-transition: 350ms color;
+                    -ms-transition: 350ms color;
+                    -o-transition: 350ms color;
+                    transition: 350ms color;
+                }
 
-        .comment .comment-footer a:hover {
-            color: #555f77;
-            text-decoration: underline;
-        }
+                    .comment .comment-footer a:hover {
+                        color: #555f77;
+                        text-decoration: underline;
+                    }
 
-        .comment .comment-info {
-            float: left;
-            width: 100%;
-        }
+            .comment .comment-info {
+                float: left;
+                width: 100%;
+            }
 
-            
 
-        .comment .comment-date:before {
-            content: "|";
-            margin: 0 10px;
-        }
+
+            .comment .comment-date:before {
+                content: "|";
+                margin: 0 10px;
+            }
     </style>
 }
 
@@ -198,29 +198,7 @@
                 <li class="breadcrumb-item"><a href="" class="primary-theme"> @Model.Name</a></li>
             </ul>
         </div>
-        @*<div class="col-lg-6 col-md-4 col-sm-12 text-right">
-            <div class="bh_chart hidden-xs">
-                <div class="float-left m-r-15">
-                    <small>Visitors</small>
-                    <h6 class="mb-0 mt-1"><i class="icon-user"></i> 1,784</h6>
-                </div>
-                <span class="bh_visitors float-right">2,5,1,8,3,6,7,5</span>
-            </div>
-            <div class="bh_chart hidden-sm">
-                <div class="float-left m-r-15">
-                    <small>Visits</small>
-                    <h6 class="mb-0 mt-1"><i class="icon-globe"></i> 325</h6>
-                </div>
-                <span class="bh_visits float-right">10,8,9,3,5,8,5</span>
-            </div>
-            <div class="bh_chart hidden-sm">
-                <div class="float-left m-r-15">
-                    <small>Chats</small>
-                    <h6 class="mb-0 mt-1"><i class="icon-bubbles"></i> 13</h6>
-                </div>
-                <span class="bh_chats float-right">1,8,5,6,2,4,3,2</span>
-            </div>
-        </div>*@
+
     </div>
 </div>
 <div class="row clearfix">
@@ -346,7 +324,8 @@
                         </div>
                     }
                 </div>
-                @if (idUser.ToString() == role.IdUser || isManager == true) { 
+                @if (idUser.ToString() == role.IdUser || isManager == true)
+                {
                     <div class="row clearfix">
                         <div class="col-sm-12" id="button-action">
                             @if (Model.StepRun.Status1.Name == "Running")
@@ -406,24 +385,7 @@
                         </div>
                     }
 
-                    @*<div class="comments">
-            <div class="comment">
-                <div class="comment-avatar">
-                    <img src="http://lorempixel.com/200/200/people/">
-                </div>
-                <div class="comment-box">
-                    <div class="comment-text ng-binding">sdasdsa</div>
-                    <div class="comment-footer">
-                        <div class="comment-info">
-                            <span class="comment-author">
-                                <a href="#">annguyen115</a>
-                            </span>
-                            <span class="comment-date">Apr 21, 2019 @@ 3:45:02 PM</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>*@
+
                 </div>
                 <!-- Comment -->
             </div>
@@ -431,10 +393,9 @@
     </div>
 </div>
 
-
-
-
 @section CustomScripts{
+    
+
     <script src="~/Content/vendor/dropify/js/dropify.min.js"></script>
     <script src="~/Content/build/js/pages/forms/dropify.js"></script>
     <script>
@@ -502,12 +463,12 @@
                             }, 1000);
                         });
                     }
-                        
+
                 }
             });
             @if (Model.Status1.Name != "Open" && (idUser.ToString() != role.IdUser || isManager != true))
             {
-               @:$(".dropify-clear").remove(); 
+               @:$(".dropify-clear").remove();
             }
             $('#btn-opentask').on('click', function () {
 
@@ -559,25 +520,9 @@
                     },1000)
                 }
             });
+
         });
-        function saveTaskRun(data) {
-            $.ajax({
-                url: "@Url.Action("savetaskrun", "processrun",new { area = "api"})",
-                type: "POST",
-                data: data,
-                contentType: false,
-                processData: false,
-                dataType: "json",
-                success: function (response) {
-                    console.log(response);
-                    if (response.status == 200) {
-                        showToastr("success", response.message, "toast-bottom-left")
-                    } else {
-                        showToastr("error", response.message, "toast-bottom-left")
-                    }
-                }
-            });
-        }
+        //Saveruntaskdata
         function submitTaskRun(data) {
             $.ajax({
                 url: "@Url.Action("donetaskrun", "processrun",new { area = "api"})",
@@ -629,6 +574,8 @@
                 }
             });
         }
+
+        // Bấm nút comment
         function addComment(data) {
             $.ajax({
                 url: "@Url.Action("addcomment", "processrun",new { area = "api"})",
@@ -636,7 +583,7 @@
                 data: data,
                 dataType: "json",
                 success: function (response) {
-                    console.log(response);
+                    showToastr.comment;
                     if (response.status == 200) {
                         var t = {
                             id:@Model.Id,
@@ -646,7 +593,7 @@
                         getComments(t);
                     }
                 }
-            });
+            })
         }
         function getComments(data) {
             $.ajax({
@@ -656,10 +603,28 @@
                 dataType: "html",
                 success: function (response) {
                     console.log(response);
-                    $(".comments").hide("slow", function () {
+                    $(".comments").hide("fast", function () {
                         $(this).remove();
                     });
                     $(".task-comment").append(response);
+                }
+            });
+        }
+        function saveTaskRun(data) {
+            $.ajax({
+                url: "@Url.Action("savetaskrun", "processrun",new { area = "api"})",
+                type: "POST",
+                data: data,
+                contentType: false,
+                processData: false,
+                dataType: "json",
+                success: function (response) {
+                    console.log(response);
+                    if (response.status == 200) {
+                        showToastr("success", response.message, "toast-center-center")
+                    } else {
+                        showToastr("error", response.message, "toast-center-center")
+                    }
                 }
             });
         }
