--- a/ProcessManagement/Views/Shared/_Layout.cshtml
+++ b/ProcessManagement/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
             }
             <script type="text/javascript">
                 $(function() {
-                    showToastr("@type", "@text", "@positionClass");
+                    @*showToastr("@type", "@text", "@positionClass");*@
                 });
             </script>
         }
