--- a/ProcessManagement/Views/Process/AddTask.cshtml
+++ b/ProcessManagement/Views/Process/AddTask.cshtml
@@ -12,6 +12,7 @@
 
 
 @section CustomCss{
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="~/Content/vendor/dropify/css/dropify.min.css">
     <link rel="stylesheet" href="~/Content/vendor/select2/dist/css/select2.min.css" />
     <link rel="stylesheet" href="~/Content/vendor/switchery/dist/switchery.min.css" />
@@ -30,29 +31,6 @@
                 <li><a href="javascript:void(0);"><i class="fa fa-plus"></i> New Task</a></li>
             </ul>
         </div>
-        @*<div class="col-lg-6 col-md-4 col-sm-12 text-right">
-                <div class="bh_chart hidden-xs">
-                    <div class="float-left m-r-15">
-                        <small>Visitors</small>
-                        <h6 class="mb-0 mt-1"><i class="icon-user"></i> 1,784</h6>
-                    </div>
-                    <span class="bh_visitors float-right">2,5,1,8,3,6,7,5</span>
-                </div>
-                <div class="bh_chart hidden-sm">
-                    <div class="float-left m-r-15">
-                        <small>Visits</small>
-                        <h6 class="mb-0 mt-1"><i class="icon-globe"></i> 325</h6>
-                    </div>
-                    <span class="bh_visits float-right">10,8,9,3,5,8,5</span>
-                </div>
-                <div class="bh_chart hidden-sm">
-                    <div class="float-left m-r-15">
-                        <small>Chats</small>
-                        <h6 class="mb-0 mt-1"><i class="icon-bubbles"></i> 13</h6>
-                    </div>
-                    <span class="bh_chats float-right">1,8,5,6,2,4,3,2</span>
-                </div>
-            </div>*@
     </div>
 </div>
 <div class="row clearfix">
@@ -76,6 +54,57 @@
                             }
                         </select>
                     </div>
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col-sm">
+                                <div class="form-group">
+                                    
+                            </div>
+
+                            <div class="col-sm">
+                                <div class="form-group">
+                                    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+
+                                    <div class="form-group">
+                                        <label for="task-name" class="required">From</label><input type="date" id="estimatefromday" />
+                                        <label for="task-name" class="required">To</label><input type="date" id="estimatetoday" />
+                                        @*<label for="task-name" class="required">Hours</label><input type="number" id="estimatehours" placeholder="Hour" required>*@
+                                        @*<button id="btncheck">Check</button>*@
+
+                                    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+                                    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+                                    <script>
+                                         $(document).ready(function () {
+                                            var options = {
+                                                dateFormat: "dd/MM/yyyy"
+                                            };
+
+                                            $("#btn-save").click(function () {
+                                                var from = $("#estimatefromday").val();
+                                                var to = $("#estimatetoday").val();
+                                                //var iphours = $("estimatehours").data();
+                                                //var eshours = (to.GetDate() - from.GetDate());
+                                                if (to > from) {  
+                                                    //alert("Estimate succesffully! ");
+                                                } else {
+                                                    alert("To date must after From date");
+
+                                                }
+                                            });
+                                        });
+
+                                        function GetDate(date) {
+                                            var parts = date.split('/');
+                                            return new Date(parts[2], parts[1], parts[0]);
+                                        };
+                                    </script>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
                     <div class="col-sm-12">
                         <div class="form-group">
                             <label for="task-file">Upload File</label>
@@ -84,6 +113,8 @@
                         </div>
                     </div>
                 </div>
+
+
                 <div class="row clearfix">
                     <div class="col-sm-12">
                         <div class="form-group">
@@ -158,10 +189,12 @@
 </div>
 @section CustomScripts{
     <script src="~/Content/vendor/dropify/js/dropify.min.js"></script>
-    <script src="~/Content/build/js/pages/forms/dropify.js"></script>
-    <script src="~/Content/vendor/select2/dist/js/select2.min.js"></script>
-    <script src="~/Content/vendor/switchery/dist/switchery.min.js"></script>
-    <script>
+                                    <script src="~/Content/build/js/pages/forms/dropify.js"></script>
+                                    <script src="~/Content/vendor/select2/dist/js/select2.min.js"></script>
+                                    <script src="~/Content/vendor/switchery/dist/switchery.min.js"></script>
+
+
+                                    <script>
         $(function () {
 
             createSwitch();
@@ -244,6 +277,6 @@
                 }
             });
         }
-    </script>
+                                    </script>
 
-}
+                                }
