--- a/ProcessManagement/Views/Group/Index.cshtml
+++ b/ProcessManagement/Views/Group/Index.cshtml
@@ -55,11 +55,11 @@
         <div class="card">
             <div class="body project_report">
                 <div class="table-responsive">
-                    <a class="btn btn-primary-theme waves-effect" href="@Url.Action("newgroup","group")">New Group</a>
+                    <a class="btn btn-primary-theme waves-effect" href="@Url.Action("newgroup","group")">New Workspace</a>
                     <table class="table table-hover js-grouplist-table dataTable dt-responsive table-custom m-b-0" style="width:100%">
                         <thead>
                             <tr>
-                                <th>Group</th>
+                                <th>Workspace</th>
                                 <th>Owner</th>
                                 <th>Member</th>
                             </tr>
@@ -130,7 +130,7 @@
             "bLengthChange": false,
             "language": {
                 "emptyTable": "You doesn't have any group yet",
-                "info": "Showing _START_ to _END_ of _TOTAL_ group",
+                "info": "Showing _START_ to _END_ of _TOTAL_ workspace",
             },
             "ajax": {
                 "type": "GET",
