--- a/ProcessManagement/Views/Home/Index.cshtml
+++ b/ProcessManagement/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             </ul>
             <div class="cw-btn-intro">
                 <a href="#" class="btn btn-success cw-btn-big" btn>Create Account</a>
-                <a href="@Url.Action("Index", "Group")" class="btn btn-default cw-btn-big" btn>Find Group</a>
+                <a href="@Url.Action("Index", "Group")" class="btn btn-default cw-btn-big" btn>Find Workspace</a>
             </div>
         </div>
     </div>
