--- a/ProcessManagement/Views/Shared/Common/_Left.cshtml
+++ b/ProcessManagement/Views/Shared/Common/_Left.cshtml
@@ -55,7 +55,7 @@
             @if (groupId != null)
             {
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#project_menu">Group</a>
+                    <a class="nav-link active" data-toggle="tab" href="#project_menu">Workspace</a>
                 </li>
             }
             <li class="nav-item">
