--- a/ProcessManagement/Views/Group/MyTask.cshtml
+++ b/ProcessManagement/Views/Group/MyTask.cshtml
@@ -17,7 +17,7 @@
             <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth"><i class="fa fa-arrow-left"></i></a> TaskBoard</h2>
             <ul class="breadcrumb">
                 <li class="breadcrumb-item"><a href="~/Home/Index" class="primary-theme"><i class="icon-home"></i></a></li>
-                <li class="breadcrumb-item"><a href="/" class="primary-theme">Groups</a></li>
+                <li class="breadcrumb-item"><a href="/" class="primary-theme">Workspace</a></li>
                 <li class="breadcrumb-item"><a href="" class="primary-theme">My Task</a></li>
             </ul>
         </div>
