--- a/ProcessManagement/Views/Process/AddTask.cshtml
+++ b/ProcessManagement/Views/Process/AddTask.cshtml
@@ -24,7 +24,7 @@
             </a>
             <ul class="breadcrumb">
                 <li><a href="@Url.RouteUrl("GroupLocalizedDefault", new { controller = "group", action = "index"})"><i class="icon-home"></i></a></li>
-                <li><a href="@Url.RouteUrl("GroupControlLocalizedDefault", new { controller = "group", action = "show", groupid = group.Id })">Group: @group.Name</a></li>
+                <li><a href="@Url.RouteUrl("GroupControlLocalizedDefault", new { controller = "group", action = "show", groupid = group.Id })">Workspace: @group.Name</a></li>
                 <li><a href="@Url.RouteUrl("GroupControlLocalizedDefault", new { controller = "process", action = "showstep", groupid = group.Id, processid = step.Process.Id })">Process: @step.Process.Name</a></li>
                 <li><a href="javascript:void(0);">Step: @step.Name</a></li>
                 <li><a href="javascript:void(0);"><i class="fa fa-plus"></i> New Task</a></li>
