--- a/ProcessManagement/Views/Process/EditRole.cshtml
+++ b/ProcessManagement/Views/Process/EditRole.cshtml
@@ -14,7 +14,7 @@
             </h2>
             <ul class="breadcrumb">
                 <li class="breadcrumb-item"><a href="~/Home/Index" class="primary-theme"><i class="icon-home"></i></a></li>
-                <li class="breadcrumb-item"><a href="/" class="primary-theme">Groups</a></li>
+                <li class="breadcrumb-item"><a href="/" class="primary-theme">Workspace</a></li>
                 <li class="breadcrumb-item"><a href="@Url.RouteUrl("GroupControlLocalizedDefault", new { controller = "group", action = "Show", groupid = group.Id })" class="primary-theme">@group.Name</a></li>
                 <li class="breadcrumb-item"><a href="" class="primary-theme">@Model.Name</a></li>
                 <li class="breadcrumb-item"><a href="" class="primary-theme">Add Role</a></li>
