--- a/ProcessManagement/Views/ProcessRun/AssignRole.cshtml
+++ b/ProcessManagement/Views/ProcessRun/AssignRole.cshtml
@@ -48,7 +48,7 @@
             <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth primary-theme"><i class="fa fa-arrow-left"></i></a> Asssign Role</h2>
             <ul class="breadcrumb">
                 <li class="breadcrumb-item"><a href="~/Home/Index" class="primary-theme"><i class="icon-home"></i></a></li>
-                <li class="breadcrumb-item"><a href="/" class="primary-theme">Groups</a></li>
+                <li class="breadcrumb-item"><a href="/" class="primary-theme">Workspace</a></li>
                 <li class="breadcrumb-item"><a href="@Url.RouteUrl("GroupControlLocalizedDefault", new { controller = "group", action = "Show", groupid = Model.Group.Id })" class="primary-theme">@Model.Group.Name</a></li>
                 <li class="breadcrumb-item"><a href="@Url.RouteUrl("GroupControlLocalizedDefault", new { controller = "processrun", action = "Detail", processid = Model.Id })">@Model.Name</a></li>
                 <li class="breadcrumb-item"><a href="" class="primary-theme">Asssign Role</a></li>
